--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ router = "0.6.0"
 clap = "2.29.0"
 persistent = "0.4.0"
 bodyparser = "0.8.0"
+serde = "1.0.25"
+serde_json = "1.0.8"
+serde_derive = "1.0.25"
